{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 136,
  "lineage": "2f481e0a-13d7-77fa-2cae-474dcb3aab74",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my-elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2f31f84e07faadb",
            "association_id": "eipassoc-0df9b11c3202fc42b",
            "domain": "vpc",
            "id": "eipalloc-0a2f31f84e07faadb",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0cc8762247251306e",
            "private_dns": "ip-172-31-26-253.ap-northeast-2.compute.internal",
            "private_ip": "172.31.26.253",
            "public_dns": "ec2-3-37-246-80.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.246.80",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-elastic-ip"
            },
            "tags_all": {
              "Name": "my-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0454bb2fefc7de534",
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:instance/i-08b6283c938fb74e0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my-ec2-instance-profile",
            "id": "i-08b6283c938fb74e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "ec2-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06bc73bb8709951c8",
            "private_dns": "ip-172-31-5-42.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.5.42",
            "public_dns": "ec2-13-125-243-43.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.243.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "my-ec2-bastion-ebs"
                },
                "throughput": 0,
                "volume_id": "vol-0012fd2226311f6a9",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0464aba145ae216d1",
            "tags": {
              "Name": "my-ec2-bastion"
            },
            "tags_all": {
              "Name": "my-ec2-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f9093df8774e39c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.my-ec2-instance-profile",
            "aws_security_group.my-sg-bastion",
            "aws_subnet.my-public-subnet1",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:internet-gateway/igw-00fb335f0f46dceaa",
            "id": "igw-00fb335f0f46dceaa",
            "owner_id": "007442965030",
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2f31f84e07faadb",
            "connectivity_type": "public",
            "id": "nat-04d2022cd2bed0460",
            "network_interface_id": "eni-0cc8762247251306e",
            "private_ip": "172.31.26.253",
            "public_ip": "3.37.246.80",
            "subnet_id": "subnet-0564f41f580ed84e0",
            "tags": {
              "Name": "my-nat-gateway"
            },
            "tags_all": {
              "Name": "my-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.my-elastic-ip",
            "aws_subnet.my-public-subnet3",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-route-table-pri-db-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:route-table/rtb-086a52dca8ce3713f",
            "id": "rtb-086a52dca8ce3713f",
            "owner_id": "007442965030",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04d2022cd2bed0460",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table-pri-db-sub1"
            },
            "tags_all": {
              "Name": "my-route-table-pri-db-sub1"
            },
            "timeouts": null,
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.my-nat-gateway",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-route-table-pri-db-sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:route-table/rtb-06cfc1cb3055cbb62",
            "id": "rtb-06cfc1cb3055cbb62",
            "owner_id": "007442965030",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04d2022cd2bed0460",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table-pri-db-sub3"
            },
            "tags_all": {
              "Name": "my-route-table-pri-db-sub3"
            },
            "timeouts": null,
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.my-nat-gateway",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-route-table-pri-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:route-table/rtb-068929992dd14723b",
            "id": "rtb-068929992dd14723b",
            "owner_id": "007442965030",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04d2022cd2bed0460",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table-pri-sub1"
            },
            "tags_all": {
              "Name": "my-route-table-pri-sub1"
            },
            "timeouts": null,
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.my-nat-gateway",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-route-table-pri-sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:route-table/rtb-0044729810e1c98f3",
            "id": "rtb-0044729810e1c98f3",
            "owner_id": "007442965030",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04d2022cd2bed0460",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table-pri-sub3"
            },
            "tags_all": {
              "Name": "my-route-table-pri-sub3"
            },
            "timeouts": null,
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.my-nat-gateway",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-route-table-pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:route-table/rtb-029266c6f7baa274e",
            "id": "rtb-029266c6f7baa274e",
            "owner_id": "007442965030",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00fb335f0f46dceaa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table-pub-sub1"
            },
            "tags_all": {
              "Name": "my-route-table-pub-sub1"
            },
            "timeouts": null,
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-internet-gateway",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-route-table-pub-sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:route-table/rtb-00be48e7fdcd77f74",
            "id": "rtb-00be48e7fdcd77f74",
            "owner_id": "007442965030",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00fb335f0f46dceaa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table-pub-sub3"
            },
            "tags_all": {
              "Name": "my-route-table-pub-sub3"
            },
            "timeouts": null,
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-internet-gateway",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-route-association-pri-db-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f30d5ce648b5d016",
            "route_table_id": "rtb-086a52dca8ce3713f",
            "subnet_id": "subnet-08402b491d785c5a9"
          },
          "dependencies": [
            "aws_eip.my-elastic-ip",
            "aws_nat_gateway.my-nat-gateway",
            "aws_route_table.my-route-table-pri-db-sub1",
            "aws_subnet.my-private-db-subnet1",
            "aws_subnet.my-public-subnet3",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-route-association-pri-db-sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055670d70e8afa66c",
            "route_table_id": "rtb-06cfc1cb3055cbb62",
            "subnet_id": "subnet-07f5e9fadbd26103e"
          },
          "dependencies": [
            "aws_eip.my-elastic-ip",
            "aws_nat_gateway.my-nat-gateway",
            "aws_route_table.my-route-table-pri-db-sub3",
            "aws_subnet.my-private-db-subnet3",
            "aws_subnet.my-public-subnet3",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-route-association-pri-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0958a9f19306d1102",
            "route_table_id": "rtb-068929992dd14723b",
            "subnet_id": "subnet-0e6576176633ea72c"
          },
          "dependencies": [
            "aws_eip.my-elastic-ip",
            "aws_nat_gateway.my-nat-gateway",
            "aws_route_table.my-route-table-pri-sub1",
            "aws_subnet.my-private-subnet1",
            "aws_subnet.my-public-subnet3",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-route-association-pri-sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09008ea42862d8b6d",
            "route_table_id": "rtb-0044729810e1c98f3",
            "subnet_id": "subnet-00994cfc14778d2f2"
          },
          "dependencies": [
            "aws_eip.my-elastic-ip",
            "aws_nat_gateway.my-nat-gateway",
            "aws_route_table.my-route-table-pri-sub3",
            "aws_subnet.my-private-subnet3",
            "aws_subnet.my-public-subnet3",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-route-association-pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073e8e712c82532e4",
            "route_table_id": "rtb-029266c6f7baa274e",
            "subnet_id": "subnet-0464aba145ae216d1"
          },
          "dependencies": [
            "aws_internet_gateway.my-internet-gateway",
            "aws_route_table.my-route-table-pub-sub1",
            "aws_subnet.my-public-subnet1",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-route-association-pub-sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1541c719af06ea0",
            "route_table_id": "rtb-00be48e7fdcd77f74",
            "subnet_id": "subnet-0564f41f580ed84e0"
          },
          "dependencies": [
            "aws_internet_gateway.my-internet-gateway",
            "aws_route_table.my-route-table-pub-sub3",
            "aws_subnet.my-public-subnet3",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:security-group/sg-08f9093df8774e39c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress security_group_rule for bastion",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-08f9093df8774e39c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress security_group_rule for Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress security_group_rule for bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-sg-bastion",
            "name_prefix": "",
            "owner_id": "007442965030",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-sg-bastion"
            },
            "tags_all": {
              "Name": "my-sg-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:security-group/sg-00daafdf367a1ba46",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress security_group_rule for db",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-00daafdf367a1ba46",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ingress security_group_rule for db",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f9093df8774e39c",
                  "sg-0eba40b8562978e04"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "my-sg-db",
            "name_prefix": "",
            "owner_id": "007442965030",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-sg-db"
            },
            "tags_all": {
              "Name": "my-sg-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.my-sg-bastion",
            "aws_security_group.my-sg-eks-cluster",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-sg-eks-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:security-group/sg-0eba40b8562978e04",
            "description": "security_group for my-eks-cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress security_group_rule for my-eks-cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eba40b8562978e04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress security_group_rule for my-eks-cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "my-sg-eks-cluster",
            "name_prefix": "",
            "owner_id": "007442965030",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-sg-eks-cluster"
            },
            "tags_all": {
              "Name": "my-sg-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "my-sg-eks-cluster-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "egress security_group_rule for my-eks-cluster",
            "from_port": 0,
            "id": "sgrule-2880939692",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0eba40b8562978e04",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.my-sg-eks-cluster",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "my-sg-eks-cluster-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ingress security_group_rule for my-eks-cluster",
            "from_port": 0,
            "id": "sgrule-1573485361",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0eba40b8562978e04",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.my-sg-eks-cluster",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-db-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:subnet/subnet-08402b491d785c5a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.31.64.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08402b491d785c5a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007442965030",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-private-db-subnet1"
            },
            "tags_all": {
              "Name": "my-private-db-subnet1"
            },
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-db-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:subnet/subnet-07f5e9fadbd26103e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.31.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f5e9fadbd26103e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007442965030",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-private-db-subnet3"
            },
            "tags_all": {
              "Name": "my-private-db-subnet3"
            },
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:subnet/subnet-0e6576176633ea72c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6576176633ea72c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007442965030",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-private-subnet1",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-private-subnet1",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:subnet/subnet-00994cfc14778d2f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.31.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00994cfc14778d2f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007442965030",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-private-subnet3",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-private-subnet3",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:subnet/subnet-0464aba145ae216d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0464aba145ae216d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "007442965030",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-public-subnet1",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-public-subnet1",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:subnet/subnet-0564f41f580ed84e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0564f41f580ed84e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "007442965030",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-public-subnet3",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-public-subnet3",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-005e0715700dbde1e"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:007442965030:vpc/vpc-005e0715700dbde1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0f5ba912a979401b4",
            "default_route_table_id": "rtb-016c865fb3f117afb",
            "default_security_group_id": "sg-07c18d4fc0740b9de",
            "dhcp_options_id": "dopt-064b026d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-005e0715700dbde1e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016c865fb3f117afb",
            "owner_id": "007442965030",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}